tests/fixtures/errors/duplicate_match_arm.gcl
// Error: duplicate match arm
type Nominal {}
type Warning {
    code: Dimensionless,
}
type Status = Nominal | Warning;

param s: Status = Nominal { };

node result: Dimensionless = match @s {
    Nominal => 0.0,
    Nominal => 1.0,
    Warning { code } => code,
};
